# WikiGOLF

./: .gitignore  CMakeLists.txt  DX_GAME.cpp  DX_GAME.rc  Resource.h  test_judge_feedback.cpp  test_loading_scene_progress.cpp  test_map_view_skybox_controller.cpp  test_obj_loader.cpp  test_physics_friction.cpp  test_resource_pool.cpp  test_tangent_generator.cpp
libs/Effekseer/: Effekseer.h  Effekseer.lib  EffekseerRendererDX11.lib
libs/assimp-6.0.2/: assimp-vc143-mt.lib
libs/assimp-6.0.2/include/assimp/: config.h
models/: Wikipedia_puzzle_globe_3D_render.stl  golf_club.fbx  golfball.fbx
shaders/: BasicPS.hlsl  BasicVS.hlsl  ParticlePS.hlsl  ParticleVS.hlsl  SkyboxPS.hlsl  SkyboxVS.hlsl  TerrainPS.hlsl  TerrainVS.hlsl  TexturedPS.hlsl  TexturedVS.hlsl
src/audio/: AudioClip.h  AudioSystem.cpp  AudioSystem.h
src/core/: GameContext.h  Input.cpp  Input.h  Logger.cpp  Logger.h  ResourceHandle.h  Scene.cpp  Scene.h  SceneManager.h  StringUtils.cpp  StringUtils.h
src/ecs/: ComponentPool.h  ComponentRegistry.h  Entity.h  Pipeline.h  System.h  View.h  World.h
src/game/components/: Camera.h  MeshRenderer.h  PhysicsComponents.h  Skybox.h  Transform.h  UIButton.h  UIImage.h  UIText.h  WikiComponents.h
src/game/scenes/: GameScene.h  LoadingScene.cpp  LoadingScene.h  LoadingSceneUtils.h  PauseScene.h  TitleScene.cpp  TitleScene.h  WikiGolfScene.cpp  WikiGolfScene.h  WikiPinballLogic.cpp  WikiPinballScene.h
src/game/systems/: CameraSystem.cpp  CameraSystem.h  GameJuiceSystem.cpp  GameJuiceSystem.h  MapSys.cpp  MapSys.h  PhysicsFriction.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  SkyboxRenderSystem.cpp  SkyboxRenderSystem.h  TerrainGenerator.cpp  TerrainGenerator.h  UIBarGaugeRenderSystem.h  UIButtonRenderSystem.h  UIButtonSystem.h  UIImageRenderSystem.h  UIRenderSystem.h  WikiClient.cpp  WikiClient.h  WikiGameSystem.cpp  WikiGameSystem.h  WikiShortestPath.cpp  WikiShortestPath.h  WikiTerrainSystem.cpp  WikiTerrainSystem.h
src/game/utils/: JudgeFeedback.cpp  JudgeFeedback.h  MapViewState.h
src/graphics/: BrushCache.h  FbxLoader.cpp  FbxLoader.h  FontManager.h  GraphicsDevice.cpp  GraphicsDevice.h  Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  SkyboxTextureGenerator.cpp  SkyboxTextureGenerator.h  TangentGenerator.cpp  TangentGenerator.h  TextRenderer.cpp  TextRenderer.h  TextStyle.h  WikiTextureGenerator.cpp  WikiTextureGenerator.h
src/resources/: ResourceManager.cpp  ResourceManager.h  ResourcePool.h
